Clubs.Api/clubs/templates/clubs-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: clubs
  name: clubs
spec:
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 80
  selector:
    app: clubs
