Clubs.Api/clubs/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: clubs-ingress
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: clubs
          servicePort: 80
